# CLIP

./: .gitignore  pyproject.toml
.github/workflows/: package.yml
clip/: model.py
